--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+        "php": ">=5.5",
         "zendframework/zend-expressive": "^0.1.0",
         "aura/router": "^2.3",
         "zendframework/zend-servicemanager": "^2.6",
